--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+div.ui.left.fixed.vertical.inverted.menu > div.openclose {
+  position: absolute;
+  left: 400px;
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+}
+
+
 div#page {
   width: calc( 100% - 15rem );
   float: right;
