--- a/css/style.css
+++ b/css/style.css
@@ -91,4 +91,5 @@ div#page > div#projeto > div.feature {
   box-shadow: 0 1px 3px 0 #d4d4d5;
   margin: 10px 0;
   border-radius: .28571429rem;
+  text-align: center;
 }
